Switch to Docker for reliable Java deployment

--- a/render.yaml
+++ b/render.yaml
@@ -1,9 +1,6 @@
 services:
   - type: web
     name: todo-list-devops
-    env: native
-    buildCommand: ./gradlew build
-    startCommand: ./gradlew bootRun
-    envVars:
-      - key: JAVA_VERSION
-        value: 17
+    env: docker
+    plan: free
+    dockerfilePath: ./Dockerfile
